[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/resources/DynamicFontMedium.tres" type="DynamicFont" id=1]
[ext_resource path="res://Main.gd" type="Script" id=2]
[ext_resource path="res://assets/images/kenney_game_icons/White/1x/cross.png" type="Texture" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 670.0
margin_bottom = 1230.0
custom_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 620.0
margin_bottom = 26.0

[node name="SignedInLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 308.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Signed in into Google?"

[node name="SignedInStatus" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 312.0
margin_right = 620.0
margin_bottom = 26.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "No :("

[node name="UserAuthenticated" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 76.0
margin_right = 620.0
margin_bottom = 176.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Is User Authenticated?"
icon = ExtResource( 3 )

[node name="SignIn" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 226.0
margin_right = 620.0
margin_bottom = 326.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Sign in!"

[node name="RequestToken" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 376.0
margin_right = 620.0
margin_bottom = 476.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Request Token"

[node name="TokenLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 526.0
margin_right = 620.0
margin_bottom = 552.0
custom_fonts/font = ExtResource( 1 )
text = "Token:"

[node name="Achievements" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 602.0
margin_right = 620.0
margin_bottom = 702.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Achievements"

[node name="Leaderboards" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 752.0
margin_right = 620.0
margin_bottom = 852.0
rect_min_size = Vector2( 0, 100 )
custom_fonts/font = ExtResource( 1 )
text = "Leaderboards"

[connection signal="pressed" from="MarginContainer/VBoxContainer/UserAuthenticated" to="." method="_on_user_authenticated_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SignIn" to="." method="_on_sign_in_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/RequestToken" to="." method="_on_request_token_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Achievements" to="." method="_on_achievements_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Leaderboards" to="." method="_on_leaderboards_pressed"]
